--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build:scripts": "node scripts/build-scripts.js",
         "build:scss": "node scripts/build-scss.js",
         "clean": "node scripts/clean.js",
-        "start": "npm run build && node scripts/start.js",
+        "start": "npm run build && node scripts/heroku-start.js",
         "start:debug": "npm run build && node scripts/start-debug.js"
     },
     "description": "Shane's refreshed portfolio",
@@ -43,6 +43,8 @@
         "pug": "3.0.0",
         "sass": "1.28.0",
         "shelljs": "0.8.4",
-        "upath": "2.0.0"
+        "upath": "2.0.0",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1"
     }
 }
