--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "title": "Shanes Portfolio",
     "name": "shanesportfolio",
     "version": "6.0.3",
+    "main": "scripts/index.js",
     "scripts": {
         "build": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
         "build:assets": "node scripts/build-assets.js",
