--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build:scripts": "node scripts/build-scripts.js",
         "build:scss": "node scripts/build-scss.js",
         "clean": "node scripts/clean.js",
-        "start": "node scripts/heroku-start.js",
+        "start": "npm run build && node scripts/heroku-start.js",
         "start:debug": "npm run build && node scripts/start-debug.js"
     },
     "description": "Shane's refreshed portfolio",
